2007-02-16  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gnome_sudoku.py: do not make menu titles insensitive,
	but the menu items instead. This complies with the HIG guidelines.
	Patch from Mariano Suárez-Alvarez in Bug #408439.  

2007-02-16  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gsudoku.py: Check that a txt object isn't NoneType,
	which causes a crash when removing the A/C charger (!!!!).
	Patch from Thomas Andersen in Bug #408334.

2007-02-03  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gnome_sudoku.py: Mark two strings for translation Bug #402870.

2007-01-27  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/defaults.py.in: Resolve Bug #393882: strings not translated. 
	This is done by specifying the locale directory specifically.

2007-01-27  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gsudoku.py: Prevent exception from occuring when
	clicking on the autofill button, when nothing is selected.
	Closes Bug #400279.

2007-01-15  Thomas M. Hinkle  <thinkle@cvs.gnome.org>

	* src/lib/gnome_sudoku.py Wrap methods that bring up a "swallowed
	dialog" (New Game, etc.) with a decorator that inactivates widgets
	that would lead to a confused state for gnome sudoku (e.g. don't
	allow the user to go two levels deep into "New Game" dialogs,
	don't allow them to "print" a game that isn't visible, etc.). This
	fixes bug #392997.

	Clear history when starting new game or opening game (#388744)
	
	* src/lib/gtk_goodies/Undo.py Add clear() method to undo history
	list.

2007-01-15  Thomas M. Hinkle  <thinkle@cvs.gnome.org>

	* src/lib/gnome_sudoku.py Use new add_value_to_ui method for
	inserting values in squares on an "undo" of clearing the
	grid. This method will re-insert values whether or not they were
	valid parts of the grid.

	* src/lib/gsudoku.py When clearing the grid, clear all
	user-entered values, whether or not they are part of our internal
	grid (or internal grid doesn't stores values that were invalid