@@ -1,3 +1,9 @@
+2007-02-22  Andreas Røsdal  <andreasr@gnome.org>
+
+	* src/lib/sudoku.py: Fix bug #409878 "crash in Sudoku:
+	clicked on the Fill button", which would raise an exception
+	when the fill button is clicked multiple times.
+
 2007-02-16  Andreas Røsdal  <andreasr@gnome.org>
 
 	* src/lib/gnome_sudoku.py: do not make menu titles insensitive,
